dist/grafana/Ingress.grafana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  labels:
    app.kubernetes.io/instance: grafana
    app.kubernetes.io/name: grafana
    app.kubernetes.io/version: 13.2.3
    helm.sh/chart: grafana-13.5.0
  name: grafana
  namespace: grafana
spec:
  rules:
    - host: grafana.cmdcentral.xyz
      http:
        paths:
          - backend:
              service:
                name: grafana
                port:
                  number: 80
            path: /
            pathType: Prefix
    - host: dashboards.cmdcentral.xyz
      http:
        paths:
          - backend:
              service:
                name: grafana
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - grafana.cmdcentral.xyz
        - dashboards.cmdcentral.xyz
      secretName: grafana-tls
